2025-12-08T12:18:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20027852821 # 1353
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-08
* notice: last 14d: unq all: 11 70
* notice: prev accum: outdated-unq outdated-all / unq all: 1291 6091 / 1301 6124
* notice: next accum: outdated-unq outdated-all / unq all: 1291 6091 / 1302 6161
* notice: prev exec diff / last date diff / accum: unq all: +1 +37 -0 -0 / +1 +37 -0 -0 / 1 37
* notice: removed / changed dates: [] / [2025-12-08]

2025-12-08T00:46:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20013119544 # 1352
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-08
* notice: last 14d: unq all: 10 33
* notice: prev accum: outdated-unq outdated-all / unq all: 1289 6089 / 1301 6124
* notice: next accum: outdated-unq outdated-all / unq all: 1291 6091 / 1301 6124
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-23] / []

2025-12-06T00:43:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19980101580 # 1348
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-06
* notice: last 14d: unq all: 12 35
* notice: prev accum: outdated-unq outdated-all / unq all: 1288 6088 / 1301 6124
* notice: next accum: outdated-unq outdated-all / unq all: 1289 6089 / 1301 6124
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-21] / []

2025-12-05T12:18:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19962724958 # 1347