@@ -1,6 +1,6 @@
 {
-  "count": 70,
-  "uniques": 11,
+  "count": 71,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2025-11-26T00:00:00Z",
@@ -39,8 +39,8 @@
     },
     {
       "timestamp": "2025-12-08T00:00:00Z",
-      "count": 37,
-      "uniques": 1
+      "count": 38,
+      "uniques": 2
     }
   ]
 }
