@@ -1,3 +1,12 @@
+2025-12-09T00:45:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20047876537 # 1354
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-09
+* notice: last 14d: unq all: 12 71
+* notice: prev accum: outdated-unq outdated-all / unq all: 1291 6091 / 1302 6161
+* notice: next accum: outdated-unq outdated-all / unq all: 1291 6091 / 1303 6162
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +38 -0 -0 / 2 38
+* notice: removed / changed dates: [] / [2025-12-08]
+
 2025-12-08T12:18:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20027852821 # 1353
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-08
